--- a/bookstore/bookstore_web/templates/index.html
+++ b/bookstore/bookstore_web/templates/index.html
@@ -1,5 +1,16 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Body here</h1>
+    <h1>Recomended</h1>
+    {% for book in books %}
+        <div>
+            <p>
+                <a href={{ book_link }}>{{ book.author }} <b>{{ book.title }}</b> ({{ book.release }})</a>
+                <br>
+                <a href={{ book_link }}><img src='https://bookstore-5217.restdb.io/media/{{ image_id }}?s=t' alt={{ book.title }} width='200px'></a>
+                <hr>
+            </p>
+        </div>
+    {% endfor %}
+
 {% endblock %}
