fix search book

--- a/bookstore/bookstore_web/templates/index.html
+++ b/bookstore/bookstore_web/templates/index.html
@@ -5,12 +5,11 @@
     {% for book in books %}
         <div>
             <p>
-                <a href={{ book_link }}>{{ book.author }} <b>{{ book.title }}</b> ({{ book.release }})</a>
+                <a href={{ book_link }}>{{ book.author }} <b>{{ book.title }}</b> ({{ book.release }}) (Dscount: {{ book.discount }})</a>
                 <br>
                 <a href={{ book_link }}><img src='https://bookstore-5217.restdb.io/media/{{ book.cover_image[0] }}?s=t' alt={{ book.title }} width='200px'></a>
                 <hr>
             </p>
         </div>
     {% endfor %}
-<p>test</p>
 {% endblock %}
