--- a/bookstore/bookstore_web/templates/index.html
+++ b/bookstore/bookstore_web/templates/index.html
@@ -5,7 +5,7 @@
         <p>
             {{ search.search_input }}
             {{ search.type }}
-            {{ search.loupe() }}
+            {{ search.submit() }}
         </p>
     </form>
     <hr>
