--- a/bookstore/bookstore_web/templates/base.html
+++ b/bookstore/bookstore_web/templates/base.html
@@ -13,7 +13,7 @@
                 <a href="{{ url_for('login') }}">Login</a>
             {% else %}
                 <a href="{{ url_for('logout') }}">Logout</a>
-                <a href="/">Account</a>
+                <a href="{{ url_for('user') }}">Account</a>
                 <a href="/">Cart</a>
             {% endif %}
             </div>
