--- a/bookstore/bookstore_web/templates/results.html
+++ b/bookstore/bookstore_web/templates/results.html
@@ -6,11 +6,12 @@
         <div>
             <p>
                 <hr>
-                {#<a href={{ book_link }}>#}{{ book.author }} <b>{{ book.title }}</b> ({{ book.release }})
+                <a href="{{ url_for('item', book_id=book.book_id) }}">{{ book.author }} <b>{{ book.title }}</b> ({{ book.release }})</a>
                 <br>
-                {#<a href={{ book_link }}>#}<img src='https://bookstore-5217.restdb.io/media/{{ book.cover_image[0] }}?s=t' alt={{ book.title }} width='200px'>
+                <a href="{{ url_for('item', book_id=book.book_id) }}"><img src='https://bookstore-5217.restdb.io/media/{{ book.cover_image[0] }}?s=t' alt={{ book.title }} width='200px'></a>
+                <br>
                 {% if current_user.is_authenticated %}
-                    <br>dd to cart!
+                    Add to cart!
                 {% endif %}
             </p>
         </div>
