+ edit user's data + change user's password + delete user

--- a/bookstore/bookstore_web/templates/login.html
+++ b/bookstore/bookstore_web/templates/login.html
@@ -96,6 +96,12 @@
 {#                <span style="color: red;">[{{ error }}]</span>#}
 {#            {% endfor %}#}
         </p>
+        <p>
+            {{ signup_form.accept() }}{{ signup_form.accept.label }}<a href={{ url_for('terms_of_use') }}>terms of use</a>.<br>
+            {% for error in signup_form.accept.errors %}
+                <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </p>
 
         <p>{{ signup_form.submit() }}</p>
     </form>
