--- a/bookstore/bookstore_web/templates/user.html
+++ b/bookstore/bookstore_web/templates/user.html
@@ -2,11 +2,14 @@
 
 {% block content %}
     <h1>User: {{ current_user }}</h1>
+    <a href={{ url_for('change_password') }}>Change password</a>
     <p>Email: {{ current_user.email }}</p>
+    <h3>Contact data:</h3>
+    <a href={{ url_for('edit_user') }}>Edit data</a>
     <p>Phone: {{ current_user.phone }}</p>
-    <h3>Address:</h3>
     <p>Street: {{ current_user.street }}</p>
     <p>Postal code: {{ current_user.postal_code }}</p>
     <p>City: {{ current_user.city }}</p>
     <p>Country: {{ current_user.country }}</p>
+    <a style="color: red;" href={{ url_for('delete_user') }}>Delete user</a>
 {% endblock %}
