--- a/bookstore/bookstore_web/templates/base.html
+++ b/bookstore/bookstore_web/templates/base.html
@@ -2,23 +2,30 @@
 <html lang="en">
 <head>
     <title>{{ global_title + after_title }}</title>
-    <link rel="icon" href="static/files/images/bookmeister.ico" type="image/x-icon">
+    <link rel="icon" href="{{ position }}static/files/images/bookmeister.ico" type="image/x-icon">
+{#    <link href="../static/styles.css" rel="stylesheet">#}
+    <link href="{{ position }}static/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
     <header>
         <div>
-            {{ global_title }}:
-            <a href={{ url_for('index') }}>Home</a>
-            {% if current_user.is_anonymous %}
-                <a href="{{ url_for('login') }}">Login</a>
-            {% else %}
-                <a href="{{ url_for('logout') }}">Logout</a>
-                <a href="{{ url_for('user') }}">Account</a>
-                <a href="/">Cart</a>
-                <div align="right";>Hello, {{ current_user }}</div>
-            {% endif %}
+            <div class="pull-left">
+                <span>{{ global_title }}: </span>
+                <a href={{ url_for('index') }}><i class="fa fa-home"></i> home</a>
             </div>
-        <hr>
+            <div class="pull-right">
+                {% if current_user.is_anonymous %}
+                    <a href="{{ url_for('login') }}"><i class="fa fa-lock"></i> login</a>
+                {% else %}
+                    <span>Hello, {{ current_user }}! </span>
+                    <a href="{{ url_for('user') }}"><i class="fa fa-user"></i> account</a>
+                    <a href="{{ url_for('cart') }}"><i class="fa fa-shopping-cart"></i> cart</a>
+                    <a href="{{ url_for('logout') }}"><i class="fa fa-power-off"></i> logout</a>
+                {% endif %}
+            </div>
+        </div>
+    <br>
+{#    <a href={{ url_for('index') }}><img src="{{ position }}static/files/images/logo.png"></a>#}
     </header>
         {% with messages = get_flashed_messages() %}
         {% if messages %}
@@ -29,6 +36,7 @@
         </ul>
         {% endif %}
         {% endwith %}
+    <br>
     {% block content %}{% endblock %}
     <footer>
         <hr>
