--- a/bookstore/bookstore_web/templates/index.html
+++ b/bookstore/bookstore_web/templates/index.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+    <br>
     <form method="POST">
         <p>
             {{ search.search_input }}
@@ -17,9 +18,22 @@
                 <br>
                 <s>{{ '{:.2f}'.format(book.price) }} {{ currency }}</s> {{ '{:.2f}'.format(book.price - book.price*book.discount/100) }} {{ currency }}, discount: {{ '{:.0f}'.format(book.discount) }}%
                 <br>
-                <a href="{{ url_for('item', book_id=book.book_id) }}"><img src='https://bookstore-5217.restdb.io/media/{{ book.cover_image[0] }}?s=t' alt={{ book.title }} width='200px'></a>
+                <a href="{{ url_for('item', book_id=book.book_id) }}"><img src='https://bookstore-5217.restdb.io/media/{{ book.cover_image[0] }}?s=t' alt='{{ book.title }}' width='200px'></a>
                 {% if current_user.is_authenticated %}
-                    <br>Add to cart!
+                    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+                    <script type=text/javascript>
+                        $(function () {
+                            $('a#add_to_cart_{{ book.book_id }}').bind('click', function () {
+                                $.getJSON('{{ url_for("add_to_cart", book_id=book.book_id) }}',
+                                    function (data) {
+                                    });
+                                return false;
+                            });
+                        });
+                    </script>
+                    <form><a href=# id=add_to_cart_{{ book.book_id }}>
+                        <button><i class="fa fa-shopping-cart"></i> Add to cart</button>
+                    </a></form>
                 {% endif %}
                 <hr>
             </p>
