--- a/bookstore/bookstore_web/templates/item.html
+++ b/bookstore/bookstore_web/templates/item.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 
 {% block content %}
     <h2>{{ book.author }}</h2>
@@ -15,6 +15,17 @@
     {% endif %}
     <img src='https://bookstore-5217.restdb.io/media/{{ book.cover_image[0] }}?s=t' alt={{ book.title }} width='400px'>
     {% if current_user.is_authenticated %}
-        <p>Add to cart</p>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+        <script type=text/javascript>
+            $(function () {
+                $('a#add_to_cart_{{ book.book_id }}').bind('click', function () {
+                    $.getJSON('{{ url_for("add_to_cart", book_id=book.book_id) }}',
+                        function (data) {
+                        });
+                    return false;
+                });
+            });
+        </script>
+        <form><a href=# id=add_to_cart_{{ book.book_id }}><button><i class="fa fa-shopping-cart"></i> Add to cart</button></a></form>
     {% endif %}
 {% endblock %}
