--- a/bookstore/bookstore_web/templates/login.html
+++ b/bookstore/bookstore_web/templates/login.html
@@ -64,45 +64,30 @@
         <p>
             {{ signup_form.phone.label }}<br>
             {{ signup_form.phone(size=12) }}
-{#            {% for error in signup_form.confirm.errors %}#}
-{#                <span style="color: red;">[{{ error }}]</span>#}
-{#            {% endfor %}#}
         </p>
         <p>
             {{ signup_form.street.label }}<br>
             {{ signup_form.street(size=52) }}
-{#            {% for error in signup_form.confirm.errors %}#}
-{#                <span style="color: red;">[{{ error }}]</span>#}
-{#            {% endfor %}#}
         </p>
         <p>
             {{ signup_form.postal_code.label }}<br>
             {{ signup_form.postal_code(size=5) }}
-{#            {% for error in signup_form.confirm.errors %}#}
-{#                <span style="color: red;">[{{ error }}]</span>#}
-{#            {% endfor %}#}
         </p>
         <p>
             {{ signup_form.city.label }}<br>
             {{ signup_form.city(size=32) }}
-{#            {% for error in signup_form.confirm.errors %}#}
-{#                <span style="color: red;">[{{ error }}]</span>#}
-{#            {% endfor %}#}
         </p>
         <p>
             {{ signup_form.country.label }}<br>
             {{ signup_form.country(size=32) }}
-{#            {% for error in signup_form.confirm.errors %}#}
-{#                <span style="color: red;">[{{ error }}]</span>#}
-{#            {% endfor %}#}
         </p>
         <p>
-            {{ signup_form.accept() }}{{ signup_form.accept.label }}<a href={{ url_for('terms_of_use') }}>terms of use</a>.<br>
+            {{ signup_form.accept() }}{{ signup_form.accept.label }}<a href={{ url_for('terms_of_use') }}>terms of use</a>.
             {% for error in signup_form.accept.errors %}
                 <span style="color: red;">[{{ error }}]</span>
             {% endfor %}
         </p>
-
+        <br>
         <p>{{ signup_form.submit() }}</p>
     </form>
 {% endblock %}
