--- a/bookstore/bookstore_web/templates/order.html
+++ b/bookstore/bookstore_web/templates/order.html
@@ -9,6 +9,35 @@
         {% endfor %}
         <p>Please complete your profile: <a href={{ url_for('edit_user') }}>edit profile data</a></p>
     {% else %}
-        <p>Order further steps</p> {# TODO #}
+        <h2>Your order:</h2>
+        <table style="width:100%">
+            <tr>
+                <th>item</th>
+                <th>unit price* [{{ currency }}]</th>
+                <th>quantity</th>
+                <th>cost [{{ currency }}]</th>
+            </tr>
+            {% for item in user_cart %}
+                <tr>
+                    <td>{{ item['name'] }}</td>
+                    <td>{{ '{:.2f}'.format(item['price']) }}</td>
+                    <td>{{ item['quantity'] }}</td>
+                    <td>{{ '{:.2f}'.format(item['cost']) }}</td>
+                </tr>
+            {% endfor %}
+            <tr>
+                <th></th>
+                <th></th>
+                <th align="right"><b>Total:</b></th>
+                <th><b>{{ '{:.2f}'.format(total) }}</b></th>
+            </tr>
+        </table>
+
+        * unit price includes discount
+        <h2>Delivery address:</h2>
+        <p>You can change delivery address <a href={{ url_for('edit_user') }}>here</a>.</p>
+        {{ current_user }}<br>{{ current_user.street }}<br>{{ current_user.postal_code }} {{ current_user.city }}<br>{{ current_user.country }}<br>(phone: {{ current_user.phone }})
+
+        <p><button>Confirm & Pay</button></p>
     {% endif %}
 {% endblock %}
